챌린지반 과제 추가 +필드 유효성 체크, 스피너 이메일 형식추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,10 @@
     <string name="PasswordHint">비밀번호를 입력하세요.</string>
     <string name="signUpButton">회원가입</string>
     <string name="loginButton">로그인</string>
+    <string name="EmailTitle">이메일</string>
+    <string name="EmailHint">Exemple</string>
+    <string name="EmailFormHint">"@"Exemple.com</string>
+    <string name="ConfirmPasswordTitle">비밀번호 확인</string>
+    <string name="ConfirmPasswordHint">비밀번호를 입력하세요.</string>
 
 </resources>
