--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="EmailFormHint">"@"Exemple.com</string>
     <string name="ConfirmPasswordTitle">비밀번호 확인</string>
     <string name="ConfirmPasswordHint">비밀번호를 입력하세요.</string>
+    <string name="passwordDescription">10자리 이상, 특수문자, 대문자포함</string>
 
 </resources>
